# composing_time

./: .gitignore  README.md  pyproject.toml  requirements.txt
composing_time/: abjad_utils.py  metric_group.py
scripts/: bar_config.json  load_metric_groups.py  markov_measure_durs.py  markov_measures.py  tempoEnvelopeExample.py
