[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composing_time"
version = "0.1.0"
description = "A Python package for planning meters and tempos in musical compositions."
authors = [
    { name = "Nicholas Luu", email = "Nicholasphamluu@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
abjad = ">=3.17"
scamp = ">=0.9.2"
